c-x: Implemented authorization token check

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "program": "${workspaceFolder}/cmd/server",
             "env": {
                 "DBUSER": "username",
-                "DBPASS": "password"
+                "DBPASS": "password",
+                "BEARER_TOKEN": "token"
             }
         }
     ]
