--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/cmd/server",
             "env": {
                 "DBUSER": "username",
-                "DBPASS": "passwrod",
+                "DBPASS": "password",
                 "BEARER_TOKEN": "token",
                 "DB_IMPL": "vanilla | orm"
             }
