--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/server",
+            "program": "${workspaceFolder}/cmd/grpc",
             "env": {
                 "DBUSER": "username",
                 "DBPASS": "password",
