--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,8 @@
             "env": {
                 "DBUSER": "username",
                 "DBPASS": "password",
+                "DBNAME": "name",
+                "DBURL": "url",
                 "BEARER_TOKEN": "token",
                 "DB_IMPL": "vanilla | orm"
             }
